--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
@@ -108,7 +108,7 @@
       <view class="sale-volume" wx:if="{{goodsInfo.salesVolume}}">已售{{goodsInfo.salesVolume}}件</view>
     </view>
     <view class="goods-name">
-      <image class="self-support-icon" wx:if="{{!goodsInfo.shopInfo}}" src="/images/self-support.png" />
+      <image class="self-support-tag" wx:if="{{!goodsInfo.shopInfo}}" src="https://static.tiddler.cn/mp/self_support.png" />
       <text>{{goodsInfo.name}}</text>
     </view>
     <view class="goods-intro" wx:if="{{goodsInfo.introduction}}">{{goodsInfo.introduction}}</view>
