--- a/pages/subpages/mine/relative-product/index.wxml
+++ b/pages/subpages/mine/relative-product/index.wxml
@@ -28,11 +28,11 @@
 
 <view class="content">
   <view class="list-wrap" wx:if="{{ curMenuIdx === 0 }}">
-    <view class="commodity-list">
-      <view class="commodity-item" wx:for="{{scenicList}}" wx:key="index" bindtap="toggleScenicSelected" data-index="{{index}}">
-        <image class="commodity-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
-        <view class="commodity-name omit single">{{item.name}}</view>
-        <view class="commodity-price-wrap">
+    <view class="product-list">
+      <view class="product-item" wx:for="{{scenicList}}" wx:key="index" bindtap="toggleScenicSelected" data-index="{{index}}">
+        <image class="product-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
+        <view class="product-name omit single">{{item.name}}</view>
+        <view class="product-price-wrap">
           <price-unit price="{{item.price}}" unit="起" />
           <image class="pick-icon" src="./images/{{item.selected ? 'checked' : 'unchecked'}}.png" />
         </view>
@@ -43,11 +43,11 @@
   </view>
 
   <view class="list-wrap" wx:if="{{ curMenuIdx === 1 }}">
-    <view class="commodity-list">
-      <view class="commodity-item" wx:for="{{hotelList}}" wx:key="index" bindtap="toggleHotelSelected" data-index="{{index}}">
-        <image class="commodity-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
-        <view class="commodity-name omit single">{{item.name}}</view>
-        <view class="commodity-price-wrap">
+    <view class="product-list">
+      <view class="product-item" wx:for="{{hotelList}}" wx:key="index" bindtap="toggleHotelSelected" data-index="{{index}}">
+        <image class="product-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
+        <view class="product-name omit single">{{item.name}}</view>
+        <view class="product-price-wrap">
           <price-unit price="{{item.price}}" unit="起" />
           <image class="pick-icon" src="./images/{{item.selected ? 'checked' : 'unchecked'}}.png" />
         </view>
@@ -58,11 +58,11 @@
   </view>
 
   <view class="list-wrap" wx:if="{{ curMenuIdx === 2 }}">
-    <view class="commodity-list">
-      <view class="commodity-item" wx:for="{{restaurantList}}" wx:key="index" bindtap="toggleRestaurantSelected" data-index="{{index}}">
-        <image class="commodity-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
-        <view class="commodity-name omit single">{{item.name}}</view>
-        <view class="commodity-price-wrap">
+    <view class="product-list">
+      <view class="product-item" wx:for="{{restaurantList}}" wx:key="index" bindtap="toggleRestaurantSelected" data-index="{{index}}">
+        <image class="product-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
+        <view class="product-name omit single">{{item.name}}</view>
+        <view class="product-price-wrap">
           <price-unit price="{{item.price}}" unit="起" />
           <image class="pick-icon" src="./images/{{item.selected ? 'checked' : 'unchecked'}}.png" />
         </view>
@@ -73,11 +73,11 @@
   </view>
 
   <view class="list-wrap" wx:if="{{ curMenuIdx === 3 }}">
-    <view class="commodity-list">
-      <view class="commodity-item" wx:for="{{goodsList}}" wx:key="index" bindtap="toggleGoodsSelected" data-index="{{index}}">
-        <image class="commodity-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
-        <view class="commodity-name omit single">{{item.name}}</view>
-        <view class="commodity-price-wrap">
+    <view class="product-list">
+      <view class="product-item" wx:for="{{goodsList}}" wx:key="index" bindtap="toggleGoodsSelected" data-index="{{index}}">
+        <image class="product-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
+        <view class="product-name omit single">{{item.name}}</view>
+        <view class="product-price-wrap">
           <price-unit price="{{item.price}}" />
           <image class="pick-icon" src="./images/{{item.selected ? 'checked' : 'unchecked'}}.png" />
         </view>
