--- a/pages/subpages/home/media/video/components/video-item/index.wxss
+++ b/pages/subpages/home/media/video/components/video-item/index.wxss
@@ -92,14 +92,14 @@
   line-height: 40rpx;
 }
 
-.commodity-list {
+.product-list {
   margin-top: 24rpx;
   width: 100%;
   line-height: 1;
   overflow-x: scroll;
   white-space: nowrap;
 }
-.commodity-item {
+.product-item {
   display: inline-block;
   margin-right: 24rpx;
   height: 100rpx;
@@ -108,7 +108,7 @@
   background-repeat: no-repeat;
   border-radius: 12rpx;
 }
-.commodity-item-inner {
+.product-item-inner {
   padding: 12rpx;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
@@ -118,13 +118,13 @@
   width: 32rpx;
   height: 32rpx;
 }
-.commodity-name {
+.product-name {
   flex: 1;
   color: #fff;
   font-size: 24rpx;
   font-weight: 600;
 }
-.commodity-data-wrap {
+.product-data-wrap {
   margin-top: 16rpx;
 }
 .market-price {
