--- a/pages/subpages/mine/create-video/index.wxss
+++ b/pages/subpages/mine/create-video/index.wxss
@@ -87,16 +87,16 @@
   height: 26rpx;
 }
 
-.commodity-list {
+.product-list {
   padding: 32rpx 0 8rpx;
 }
-.commodity-item {
+.product-item {
   margin-bottom: 24rpx;
   padding: 16rpx;
   border-radius: 20rpx;
   border: 1px solid #eee;
 }
-.commodity-image-wrap {
+.product-image-wrap {
   position: relative;
   font-size: 0;
   width: 100rpx;
@@ -104,7 +104,7 @@
   border-radius: 10rpx;
   overflow: hidden;
 }
-.commodity-image {
+.product-image {
   width: 100%;
   height: 100%;
 }
@@ -120,7 +120,7 @@
   border-bottom-right-radius: 6rpx;
   background: rgba(0, 0, 0, 0.6);
 }
-.commodity-info {
+.product-info {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -128,7 +128,7 @@
   flex: 1;
   height: 100rpx;
 }
-.commodity-name {
+.product-name {
   color: #333;
   font-size: 24rpx;
   font-weight: bold;
