--- a/pages/subpages/mine/relative-product/index.wxss
+++ b/pages/subpages/mine/relative-product/index.wxss
@@ -84,12 +84,12 @@
   padding: 234rpx 24rpx calc(136rpx + env(safe-area-inset-bottom));
 }
 
-.commodity-list {
+.product-list {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
-.commodity-item {
+.product-item {
   margin-bottom: 22rpx;
   padding: 24rpx;
   width: 340rpx;
@@ -97,18 +97,18 @@
   background: #FFFFFF;
   border-radius: 20rpx;
 }
-.commodity-img {
+.product-img {
   width: 292rpx;
   height: 292rpx;
   border-radius: 10rpx;
 }
-.commodity-name {
+.product-name {
   margin-top: 10rpx;
   flex: 1;
   color: #333;
   font-size: 28rpx;
 }
-.commodity-price-wrap {
+.product-price-wrap {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -126,8 +126,8 @@
   transform: translateX(-50%);
   width: calc(100% - 48rpx);
   height: 88rpx;
-  color: var(--gold-1);
+  color: #fff;
   font-size: 32rpx;
-  background: var(--blue-linear-2);
+  background: var(--blue-1);
   border-radius: 44rpx;
 }
