--- a/pages/subpages/mine/order/index.wxss
+++ b/pages/subpages/mine/order/index.wxss
@@ -91,3 +91,14 @@
   border-radius: 1.5px;
   background: var(--blue-1);
 }
+
+.container {
+  padding: 24rpx;
+}
+
+.no-more-tips {
+  padding: 16rpx 0 24rpx;
+  color: #999;
+  font-size: 24rpx;
+  text-align: center;
+}
