--- a/pages/subpages/mine/order/components/goods-order-item/index.wxml
+++ b/pages/subpages/mine/order/components/goods-order-item/index.wxml
@@ -19,7 +19,7 @@
       <image class="alarm-icon" src="./images/alarm.png" />
       <view class="countdown">
         <text style="color: #666;">剩余 </text>
-        <text>{{TIME.countdown(countdown, 'hh:mm:ss')}}</text>
+        <text>{{TIME.countDown(countdown, 'hh:mm:ss')}}</text>
       </view>
     </view>
     <view class="list-footer">
