feat: 礼包商品列表

--- a/components/goods-item/index.wxml
+++ b/components/goods-item/index.wxml
@@ -1,6 +1,6 @@
 <view class="goods-item {{visible ? 'show' : ''}}" bindtap="navToGoodsDetail">
-  <view class="cover-wrap {{showTag ? 'show-tag' : ''}} {{isGift ? 'gift' : ''}}">
-    <view class="gift-bar" wx:if="{{isGift}}">
+  <view class="cover-wrap {{showTag ? 'show-tag' : ''}} {{item.isGift ? 'gift' : ''}}">
+    <view class="gift-bar" wx:if="{{item.isGift}}">
       <image class="bar-title" src="https://static.tiddler.cn/mp/gift/bar_title.png" />
       <view class="bar-content row center">
         <image class="bar-slogan" src="https://static.tiddler.cn/mp/gift/bar_slogan.png" />
