--- a/pages/subpages/gift/index.wxml
+++ b/pages/subpages/gift/index.wxml
@@ -32,7 +32,7 @@
     </view>
 
     <view class="goods-list">
-      <fall-flow wx:if="{{goodsList}}" list="{{goodsList}}" generic:item="goods-item" isGift />
+      <fall-flow wx:if="{{goodsList}}" list="{{goodsList}}" generic:item="goods-item" />
       <empty-illus wx:if="{{finished && !goodsList.length}}" desc="暂无家乡好物" />
       <view class="no-more-tips" wx:if="{{finished && goodsList.length}}">～没有更多了～</view>
     </view>
