--- a/pages/tab-bar-pages/home/index.wxss
+++ b/pages/tab-bar-pages/home/index.wxss
@@ -104,6 +104,23 @@
   min-height: 100%;
 }
 
+.banner {
+  margin-top: 8rpx;
+  margin-bottom: 32rpx;
+  height: 200rpx;
+}
+.banner-item {
+  border-radius: 40rpx;
+}
+.banner-img {
+  width: 100%;
+  height: 100%;
+}
+.banner .wx-swiper-dot {
+  width: 12rpx;
+  height: 12rpx;
+}
+
 .category-list {
   margin: 18rpx 24rpx 32rpx;
 }
@@ -120,7 +137,6 @@
   color: #333;
   font-size: 20rpx;
 }
-
 
 .loading {
   padding: 16rpx 0 24rpx;
