--- a/pages/tab-bar-pages/mall/index.wxss
+++ b/pages/tab-bar-pages/mall/index.wxss
@@ -2,10 +2,6 @@ page {
   background: #fff;
 }
 
-.container {
-  padding-bottom: 138rpx;
-}
-
 .nav-bar {
   position: fixed;
   display: flex;
@@ -33,8 +29,8 @@ page {
   width: 200px;
   height: 36px;
   border-radius: 18px;
-  background: #fff;
-  box-shadow: 0 10px 20px #f0f0f0;
+  background: rgba(255,255,255,0.68);
+  box-shadow: 0px 1px 12px 0px rgba(0,0,0,0.1);
 }
 .search-bar.active {
   background: #f5f6f7;
@@ -42,12 +38,21 @@ page {
 }
 .search-icon {
   margin-right: 5px;
-  width: 16px;
-  height: 16px;
+  width: 14px;
+  height: 14px;
 }
 .placeholder {
   color: #666;
-  font-size: 14px;
+  font-size: 12px;
+}
+
+.container {
+  position: absolute;
+  padding-bottom: 138rpx;
+  left: 0;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.68);
+  backdrop-filter: blur(8px);
 }
 
 .banner-item {
@@ -63,6 +68,7 @@ page {
 .category-list {
   display: flex;
   justify-content: space-around;
+  padding: 20rpx 0 10rpx;
 }
 .category-item {
   font-size: 0;
@@ -78,10 +84,7 @@ page {
 }
 
 .product-list {
-  margin-top: 30rpx;
   padding: 20rpx;
-  border-radius: 42rpx 42rpx 0 0;
-  box-shadow: 0 -10px 20px -2px #f0f0f0;
 }
 
 .loading {
