--- a/pages/tab-bar-pages/mall/index.wxml
+++ b/pages/tab-bar-pages/mall/index.wxml
@@ -6,7 +6,13 @@
   </view>
 </view>
 
-<swiper class="banner" wx:if="{{bannerList.length}}" style="height: calc({{statusBarHeight + 44}}px + 300rpx);" autoplay circular>
+<swiper 
+  class="banner" 
+  wx:if="{{bannerList.length}}" 
+  style="height: calc({{statusBarHeight + 44}}px + 300rpx);" 
+  autoplay 
+  circular
+>
   <swiper-item 
     class="banner-item" 
     wx:for="{{bannerList}}"
