--- a/pages/tab-bar-pages/mall/index.wxml
+++ b/pages/tab-bar-pages/mall/index.wxml
@@ -1,8 +1,12 @@
 <view class="nav-bar {{navBarActive ? 'active': ''}}" style="padding-top: {{statusBarHeight}}px">
-  <image class="sign-in-icon" src="/images/sign_in.png" />
+  <!-- <image class="sign-in-icon" src="/images/sign_in.png" /> -->
+  <view class="promoter-icon" wx:if="{{promoterInfo}}">
+    <image class="promoter-avatar" src="{{promoterInfo.avatar}}" />
+    <image class="promoter-medal" src="https://static.tiddler.cn/mp/promoter/level_{{promoterInfo.level}}/medal.gif" />
+  </view>
   <view class="search-bar {{navBarActive ? 'active': ''}}" bindtap="search">
     <image class="search-icon" src="https://img.ubo.vip/tiddler/nav-icon/search.png" />
-    <text class="placeholder">搜索景点、酒店等</text>
+    <text class="placeholder">搜索景点、酒店、美食...</text>
   </view>
 </view>
 
