--- a/pages/tab-bar-pages/mall/index.wxss
+++ b/pages/tab-bar-pages/mall/index.wxss
@@ -21,12 +21,34 @@ page {
   height: 29.5px;
 }
 
+.promoter-icon {
+  position: relative;
+  margin-left: 8px;
+  margin-right: 4px;
+  width: 34px;
+  height: 34px;
+  font-size: 0;
+}
+.promoter-avatar {
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  border: 2px solid #fff;
+}
+.promoter-medal {
+  position: absolute;
+  right: -4px;
+  bottom: -1px;
+  width: 20px;
+  height: 20px;
+}
+
 .search-bar {
   display: flex;
   align-items: center;
   margin-left: 8px;
   padding-left: 12px;
-  width: 200px;
+  width: 400rpx;
   height: 36px;
   border-radius: 18px;
   background: rgba(255,255,255,0.68);
@@ -51,7 +73,7 @@ page {
   padding-bottom: 138rpx;
   left: 0;
   width: 100%;
-  background: rgba(255, 255, 255, 0.68);
+  background: rgba(255, 255, 255, 0.8);
   backdrop-filter: blur(8px);
 }
 
