--- a/pages/tab-bar-pages/mall/index.wxml
+++ b/pages/tab-bar-pages/mall/index.wxml
@@ -16,6 +16,7 @@
   style="height: calc({{statusBarHeight + 44}}px + 300rpx);" 
   autoplay 
   circular
+  interval="8000"
 >
   <swiper-item 
     class="banner-item" 
