--- a/pages/subpages/home/media/video/components/video-item/index.wxss
+++ b/pages/subpages/home/media/video/components/video-item/index.wxss
@@ -101,18 +101,19 @@
 }
 .product-item {
   display: inline-block;
-  margin-right: 24rpx;
+  margin-right: 12rpx;
   height: 100rpx;
   width: 260rpx;
   background-size: 100%;
   background-repeat: no-repeat;
-  border-radius: 12rpx;
+  border-radius: 24rpx;
+  vertical-align: top;
 }
 .product-item-inner {
   padding: 12rpx;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  border-radius: 12rpx;
+  border-radius: 24rpx;
 }
 .comodity-icon {
   width: 32rpx;
